--- a/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-detail.html
@@ -1078,7 +1078,7 @@
                                                                              <div class="row">
                                                                                 <div class="col-md-4">
                                                                                     <div class="form-group">
-                                                                                        <button class="btn btn-success pull-left add-user-terkait">Pilih User Terkait</button>
+                                                                                        <button class="btn btn-success pull-left add-user-terkait">Pilih User Approval Terkait</button>
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
@@ -1086,7 +1086,7 @@
                                                                              <div class="row">
                                                                                 <div class="col-md-4">
                                                                                     <div class="form-group">
-                                                                                        <label>User Terkait </label>
+                                                                                        <label>User Approval Terkait </label>
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
