--- a/Reston.EProc.Runner.IIS/View/create-po.html
+++ b/Reston.EProc.Runner.IIS/View/create-po.html
@@ -205,14 +205,14 @@
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-md-4">
-                                        <label class="title">Bank:</label>
-                                        <select name="BankInfo.Nama" class="form-control select2 required" style="width: 100%;"></select>
+                                        <label class="title">Atas Nama:</label>
+                                        <input id="atas-nama" class="form-control" type="text">
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-md-4">
-                                        <label class="title">Atas Nama:</label>
-                                        <input id="atas-nama" class="form-control" type="text">
+                                        <label class="title">Bank:</label>
+                                        <select name="BankInfo.Nama" class="form-control select2 required" style="width: 100%;"></select>
                                     </div>
                                     <div class="form-group col-md-4">
                                         <label class="title">No. Rekening:</label>
@@ -301,7 +301,7 @@
                                                     <th>Nama Barang</th>
                                                     <th>Banyak</th>
                                                     <th>Satuan</th>
-                                                    <th>Harga</th>
+                                                    <th>Harga Satuan</th>
                                                     <th>Jumlah</th>
                                                     <th>Keterangan</th>
                                                     <th></th>
