--- a/Reston.EProc.Runner.IIS/View/report.html
+++ b/Reston.EProc.Runner.IIS/View/report.html
@@ -126,7 +126,7 @@
                     <div id="perlu_perhatian">
 						<div class="box box-white">
 							<div class="box-header with-border">
-								<h3 class="box-title text-blue-mtf">Report</h3>
+								<h3 class="box-title text-blue-mtf">Report Pengadaan</h3>
 							</div><!-- /.box-header -->
 							<div class="box-body">
 								<div role="form" class="jp-form row">
@@ -147,7 +147,79 @@
 								</a>-->
 							</div><!-- /.box-footer -->
 					    </div>
-					</div>		
+					</div>	
+                    
+                    <div id="perlu_perhatian">
+                        <div class="box box-white">
+                            <div class="box-header with-border">
+                                <h3 class="box-title text-blue-mtf">Report PKS</h3>
+                            </div><!-- /.box-header -->
+                            <div class="box-body">
+                                <div role="form" class="jp-form row">
+                                    <div class="form-group col-md-2">
+                                        <input id="report_pks_dari" type="text" class="form-control date" placeholder="Dari">
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <input id="report_pks_sampai" type="text" class="form-control date" placeholder="Sampai">
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <button id="report_pks" type="button" class="pull-middle btn btn-primary btn-lmedia">Download Xls</button>
+                                    </div>
+                                </div>
+                            </div><!-- /.box-body -->
+                            <div class="box-footer text-center">
+                                <!--<a id="A1" class="uppercase">Berikutnya</a>-->
+                            </div><!-- /.box-footer -->
+                        </div>
+                    </div>
+
+                    <div id="perlu_perhatian">
+                        <div class="box box-white">
+                            <div class="box-header with-border">
+                                <h3 class="box-title text-blue-mtf">Report SPK</h3>
+                            </div><!-- /.box-header -->
+                            <div class="box-body">
+                                <div role="form" class="jp-form row">
+                                    <div class="form-group col-md-2">
+                                        <input id="report_spk_dari" type="text" class="form-control date" placeholder="Dari">
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <input id="report_spk_sampai" type="text" class="form-control date" placeholder="Sampai">
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <button id="report_spk" type="button" class="pull-middle btn btn-primary btn-lmedia">Download Xls</button>
+                                    </div>
+                                </div>
+                            </div><!-- /.box-body -->
+                            <div class="box-footer text-center">
+                                <!--<a id="A1" class="uppercase">Berikutnya</a>-->
+                            </div><!-- /.box-footer -->
+                        </div>
+                    </div>
+
+                    <div id="perlu_perhatian">
+                        <div class="box box-white">
+                            <div class="box-header with-border">
+                                <h3 class="box-title text-blue-mtf">Report PO</h3>
+                            </div><!-- /.box-header -->
+                            <div class="box-body">
+                                <div role="form" class="jp-form row">
+                                    <div class="form-group col-md-2">
+                                        <input id="report_po_dari" type="text" class="form-control date" placeholder="Dari">
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <input id="report_po_sampai" type="text" class="form-control date" placeholder="Sampai">
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <button id="report_po" type="button" class="pull-middle btn btn-primary btn-lmedia">Download Xls</button>
+                                    </div>
+                                </div>
+                            </div><!-- /.box-body -->
+                            <div class="box-footer text-center">
+                                <!--<a id="A1" class="uppercase">Berikutnya</a>-->
+                            </div><!-- /.box-footer -->
+                        </div>
+                    </div>
 											
 				</div>	
 			</div>
