--- a/Reston.EProc.Runner.IIS/View/create-spk.html
+++ b/Reston.EProc.Runner.IIS/View/create-spk.html
@@ -209,11 +209,11 @@
                                             <div class="form-group">
                                                 <label class="title">
                                                     Unduh Template SPK
-                                                    <a class="download-dokumen download-berkas input-spk"  attr1="berkas-buka-amplop"><i class="fa fa-fw fa-download"></i></a>
+                                                    <a class="download-dokumen download-berkas input-spk" id="template-spk" attr1="berkas-buka-amplop"><i class="fa fa-fw fa-download template-spk"></i></a>
                                                 </label>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>  
                                     <div class="row">
                                         <div class="form-group col-md-4">
                                             <label class="title">Nilai SPK</label>
