history approval, dok lainnya masuk vendor, dll

--- a/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-belum-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-persetujuan-pemenang-belum-disetujui.html
@@ -280,7 +280,7 @@
                     },
                     { "data": "Judul" },
                     { "data": "HPS", "className": "rata_kanan" },
-                    { "data": "HargaNegosiasi", "className": "rata_kanan" },
+                    { "data": "HargaPemanang" },
                     { "data": "Pemenang" },
                     { "data": "JenisPekerjaan", "className": "tengah" },
                     { "data": "StatusPersetujuanPemenangName" },
@@ -298,16 +298,6 @@
                         },
 
                         "targets": 2,
-                        "orderable": false
-                    },
-                    {
-                        "render": function (data, type, row) {
-                            if (data != null)
-                                return accounting.formatNumber(row.HargaNegosiasi, { thousand: ".", decimal: ",", precision: 2 })
-                            else return "";
-                        },
-
-                        "targets": 3,
                         "orderable": false
                     },
                     {
