--- a/Reston.EProc.Runner.IIS/View/rekanan-side-detail-pengadaan.html
+++ b/Reston.EProc.Runner.IIS/View/rekanan-side-detail-pengadaan.html
@@ -180,9 +180,9 @@
                                                                 <div id="BerkasRujukanLain" attr="BerkasRujukanLain" action="/api/VendorAction/UploadFile?tipe=BerkasRujukanLain" class="dropzone"></div>
                                                             </div>
                                                             <div class="form-group col-md-6">
-                                                                <label class="title">Berkas Rujukan: </label>
-                                                                <label class="deskripsi" id="TitleBerkasRujukanLain"> </label>
-                                                                <div id="BerkasRujukanLain" attr="BerkasRujukanLain" action="/api/VendorAction/UploadFile?tipe=BerkasRujukanLain" class="dropzone"></div>
+                                                                <label class="title">Dokumen Lainnya:</label>
+                                                                <label class="deskripsi" id="TitleDokumenLain"></label>
+                                                                <div id="DokumenLain" attr="DOKUMENLAIN" action="/api/PengadaanE/UploadFile?tipe=DOKUMENLAIN" class="dropzone"></div>
                                                             </div>
                                                         </div>
 														    <div class="row">
