Pengadaan Repo, PO, Buka Amplop, Pengadaan Terbuka html, Dataset

--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -420,14 +420,14 @@
                                                                                 </div>
                                                                             </div>
                                                                         </div>
-                                                                        <div class="col-md-2">
+                                                                        <!--<div class="col-md-2">
                                                                             <div class="form-group">
                                                                                 <label class="title">
                                                                                     Unduh Berita Acara
                                                                                     <a class="download-dokumen download-berkas " attr1="berkas-pendaftaran"><i class="fa fa-fw  fa-download"></i></a>
                                                                                 </label>
                                                                             </div>
-                                                                        </div>
+                                                                        </div>-->
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="col-md-4">
@@ -574,7 +574,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <button id="btn-next-submit-penawaran" class="btn btn-success pull-left next-step" elDari="#next-submit-dari" elSampai="#next-submit-sampai" disabled="disabled">Save&NextStep</button>
+                                                                                <button id="btn-next-submit-penawaran" class="btn btn-success pull-left next-step"  attrStatus="AANWIJZING" elDari="#next-submit-dari" elSampai="#next-submit-sampai" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -633,7 +633,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <button id="btn-next-buka-amplop" class="btn btn-success pull-left next-step" elDari="#next-buka-amplop-dari" elSampai="#next-buka-amplop-sampai" disabled="disabled">Save&NextStep</button>
+                                                                                <button id="btn-next-buka-amplop" class="btn btn-success pull-left next-step" elDari="#next-buka-amplop-dari" attrStatus="SUBMITPENAWARAN" elSampai="#next-buka-amplop-sampai" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -749,7 +749,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <button id="btn-next-penilaian" class="btn btn-success pull-left next-step" elDari="#next-penilaian-dari" elSampai="#next-penilaian-sampai" disabled="disabled">Save&NextStep</button>
+                                                                                <button id="btn-next-penilaian" class="btn btn-success pull-left next-step" elDari="#next-penilaian-dari" attrStatus="BUKAAMPLOP" elSampai="#next-penilaian-sampai" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -864,7 +864,7 @@
                                                                     <div class="row">
                                                                         <div class="col-md-2">
                                                                             <div class="form-group">
-                                                                                <button id="btn-next-pemenang" class="btn btn-success pull-left next-step" elDari="#next-pemenang-dari" elSampai="" disabled="disabled">Save&NextStep</button>
+                                                                                <button id="btn-next-pemenang" class="btn btn-success pull-left next-step" attrStatus="KLARIFIKASI" elDari="#next-pemenang-dari" elSampai="" disabled="disabled">Save&NextStep</button>
                                                                             </div>
                                                                         </div>
                                                                         <div class="col-md-2">
