--- a/Reston.EProc.Runner.IIS/View/report.html
+++ b/Reston.EProc.Runner.IIS/View/report.html
@@ -220,6 +220,31 @@
                             </div><!-- /.box-footer -->
                         </div>
                     </div>
+
+
+                    <div id="perlu_perhatian">
+                        <div class="box box-white">
+                            <div class="box-header with-border">
+                                <h3 class="box-title text-blue-mtf">Report Monitoring</h3>
+                            </div><!-- /.box-header -->
+                            <div class="box-body">
+                                <div role="form" class="jp-form row">
+                                    <div class="form-group col-md-2">
+                                        <input id="report_monitoring_dari" type="text" class="form-control date" placeholder="Dari">
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <input id="report_monitoring_sampai" type="text" class="form-control date" placeholder="Sampai">
+                                    </div>
+                                    <div class="form-group col-md-2">
+                                        <button id="report_monitoring" type="button" class="pull-middle btn btn-primary btn-lmedia">Download Xls</button>
+                                    </div>
+                                </div>
+                            </div><!-- /.box-body -->
+                            <div class="box-footer text-center">
+                                <!--<a id="A1" class="uppercase">Berikutnya</a>-->
+                            </div><!-- /.box-footer -->
+                        </div>
+                    </div>
 											
 				</div>	
 			</div>
