--- a/Reston.EProc.Runner.IIS/View/pks.html
+++ b/Reston.EProc.Runner.IIS/View/pks.html
@@ -166,13 +166,13 @@
                                             <table class="table table-bordered table-striped table-responsive" id="tbl-approval" style="margin-top:20px; ">
                                                 <thead>
                                                     <tr>
-                                                        <th>Nama Pekerjaan</th>
-                                                        <th>Harga Rekanan</th>
-                                                        <th>Nomor PKS</th>
-                                                        <th>Klasifikasi</th>
-                                                        <th>Vendor</th>
-                                                        <th>Status</th>
-                                                        <th></th>
+                                                        <th class="tengah">Nama Pekerjaan</th>
+                                                        <th class="tengah">Harga Rekanan</th>
+                                                        <th class="tengah">Nomor PKS</th>
+                                                        <th class="tengah">Klasifikasi</th>
+                                                        <th class="tengah">Vendor</th>
+                                                        <th class="tengah">Status</th>
+                                                        <th class="tengah">Action</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -297,10 +297,10 @@
                 "columns": [
                     { "data": "Judul" },
                     { "data": "HPS", "className": "rata_kanan" },
-                     { "data": "NoPks" },
-                    { "data": "JenisPekerjaan" },
-                    { "data": "Vendor" },
-                    { "data": "StatusPksName" },
+                    { "data": "NoPks" },
+                    { "data": "JenisPekerjaan", "className": "tengah" },
+                    { "data": "Vendor", "className": "tengah" },
+                    { "data": "StatusPksName", "className": "tengah" },
                     { "data": null }
                 ],
                 "columnDefs": [
