--- a/Reston.EProc.Runner.IIS/View/registrasibystaff.html
+++ b/Reston.EProc.Runner.IIS/View/registrasibystaff.html
@@ -705,7 +705,7 @@
 			</p><p align="center">
 				<b>Nomor Pengajuan: 2015020001</b>
 				<br/>
-				<img width="190px" height="190px" src="qrcode.jpg" />
+				<!--<img width="190px" height="190px" src="qrcode.jpg" />-->
 				<br/>
 				<input type="button" class="btn btn-xs btn-success" value="Cetak"/>
 				<br/>
