--- a/Reston.EProc.Runner.IIS/View/spk.html
+++ b/Reston.EProc.Runner.IIS/View/spk.html
@@ -166,12 +166,13 @@
                                             <table class="table table-bordered table-striped table-responsive" id="tbl-approval" style="margin-top:20px; ">
                                                 <thead>
                                                     <tr>
-                                                        <th>Nama Pekerjaan</th>
-                                                        <th>NIlai SPK</th>
-                                                        <th>Klasifikasi</th>
-                                                        <th>No SPK</th>
-                                                        <th>Pemenang</th>
-                                                        <th></th>
+                                                        <th class="tengah">Nama Pekerjaan</th>
+                                                        <th class="tengah">NIlai SPK</th>
+                                                        <th class="tengah">Klasifikasi</th>
+                                                        <th class="tengah">No SPK</th>
+                                                        <th class="tengah">Pemenang</th>
+                                                        <th class="tengah">Status</th>
+                                                        <th class="tengah">Action</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -221,13 +222,13 @@
                                             <table class="table table-bordered table-striped table-responsive" id="tbl-po" style="margin-top:20px; ">
                                                 <thead>
                                                     <tr>
-                                                        <th>Prihal</th>
-                                                        <th>No. PO</th>
-                                                        <th>Nama Vendor</th>
-                                                        <th>Tanggal PO</th>
-                                                        <th>Yang Buat</th>
-                                                        <th>Nilai PO</th>
-                                                        <th>Action</th>
+                                                        <th class="kiri">Prihal</th>
+                                                        <th class="tengah">No. PO</th>
+                                                        <th class="tengah">Nama Vendor</th>
+                                                        <th class="tengah">Tanggal PO</th>
+                                                        <th class="tengah">PIC</th>
+                                                        <th class="tengah">Nilai PO</th>
+                                                        <th class="tengah">Action</th>
                                                     </tr>
                                                 </thead>                                               
                                             </table>
