--- a/Reston.EProc.Runner.IIS/View/create-po.html
+++ b/Reston.EProc.Runner.IIS/View/create-po.html
@@ -30,7 +30,6 @@
 	<link href="dist/site.css" rel="stylesheet" />
 	<link href="plugins/jQueryUItotop/ui.totop.css" rel="stylesheet" />
 	<link rel="stylesheet" href="plugins/JQueryValidation/validationEngine.jquery.css">
-	<link href="chatjs/css/jquery.chatjs.css" rel="stylesheet" /> 
 	<link href="plugins/datepicker/datepicker3.css" rel="stylesheet" />
 	<link rel="stylesheet" href="bootstrap/css/bootstrap-tagsinput.css">
 	<link rel="stylesheet" href="dist/app.css">
@@ -170,6 +169,22 @@
                                         <label class="title">Nilai PO:</label>
                                         <input id="nilai-po" class="form-control" type="text" disabled>
                                         <input id="nilai-po-hidden" class="form-control" type="hidden">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="form-group col-md-4">
+                                        <label class="title">Tanggal DO:</label>
+                                        <input id="tanggal-do" type="text" class="form-control input-group date">
+                                    </div>
+                                    <div class="form-group col-md-4">
+                                        <label class="title">Tanggal Invoice:</label>
+                                        <input id="tanggal-invoice" class="form-control input-group date" type="text"/>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="form-group col-md-4">
+                                        <label class="title">Tanggal Pengiriman Ke Finance:</label>
+                                        <input id="tanggal-kirim-finance" type="text" class="form-control input-group date">
                                     </div>
                                 </div>
                                 <div class="row">
