Favicon dan Report Monitoring

--- a/Reston.EProc.Runner.IIS/View/create-po.html
+++ b/Reston.EProc.Runner.IIS/View/create-po.html
@@ -163,7 +163,7 @@
                                 <div class="row">
                                     <div class="form-group col-md-4">
                                         <label class="title">Tanggal PO:</label>
-                                        <input id="tanggal-po" type="text" class="tanggal-tahapan form-control input-group date">
+                                        <input id="tanggal-po" type="text" class="form-control input-group date">
                                     </div>
                                     <div class="form-group col-md-4">
                                         <label class="title">Nilai PO:</label>
